[build]
target = "wasm32-unknown-unknown"

[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.dependencies]
soroban-sdk = "21.7.4"
soroban-token-sdk = "21.7.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = true
debug-assertions = true
strip = "symbols"
# panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
