[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.dependencies]
soroban-sdk = "22.0.0-rc.3.2"
soroban-token-sdk = "22.0.0-rc.3.2"


[profile.release]
opt-level = "z"
overflow-checks = true
debug = true
debug-assertions = true
strip = "symbols"
# panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
